src/objects/PBS_Training_Plan_Category__c.object
<CustomObject>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia / Africa / NAMET (U2K2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia (Fusion)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Journey_Type__c</fullName>
        <label>Journey Type</label>
        <picklist>
            <picklistValues>
                <fullName>30 Days Onboarding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Learning_Category__c</fullName>
        <label>Learning Category</label>
        <referenceTo>PBS_Learning_Category__c</referenceTo>
        <relationshipName>Training_Plan_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlannerType__c</fullName>
        <label>Planner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Demand &amp; Supply Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply / Requirements Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repack Planner/Officer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Plan__c</fullName>
        <label>Training Plan</label>
        <referenceTo>PBS_Training_Plan__c</referenceTo>
        <relationshipName>Training_Plan_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Work_Level__c</fullName>
        <label>Work Level</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PBS_Training Plan Category</label>
    <nameField>
        <displayFormat>TPC-{0000000}</displayFormat>
        <label>Training Plan Category ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS_Training Plan Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>